2015-05-18  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql
	  include/ajax/incidents.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php: Fixed linked
	fields.

2015-05-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  include/js/integria_incident_search.js
	  operation/incidents/incident_type_field.php: Added numeric type.

	* extras/mr/20.sql: Added file.

	* include/functions_incidents.php
	  include/ajax/incidents.php: Allow only one level of
	ticket hierarchy.

2015-05-07  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql
	  include/functions_incidents.php
	  include/js/integria_incident_search.js: Fixed bug searching
	tickets and added dato to inventory fields.

2015-04-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_dashboard_detail.php
	  operation/incidents/incident_detail.php: Added tab with
	associated tickets.
	
	* operation/incidents/incident_tickets.php: Added file.

2015-04-20  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_dashboard_detail.php
	  operation/incidents/incident_detail.php: Close incidents
	when the father is closed.

2015-04-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/contracts.php
	  operation/invoices/invoice_detail.php
	  operation/invoices/invoices.php: Ticket #2001.

2015-04-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* general/home.php: Ticket #1830.

2015-04-08  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql: Ticket #1708.

	* extras/mr/19.sql: Added file.

2015-04-08  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php
	  general/header.php
	  include/functions.php
	  include/ajax/header.php: Ticket #1830.

2015-04-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php
	  general/login_page.php: Ticket #1836.
